// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer gets dismissed 1`] = `
<StyledAssistantContainer>
  <StyledAssistantInputRow>
    <QuestionMarkIcon
      hasGuide={true}
    />
    <StyledTitle>
      1. Title 1
    </StyledTitle>
    <div
      className="close-button"
    >
      <CloseIcon />
    </div>
  </StyledAssistantInputRow>
  <StyledContent>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Message 1",
        }
      }
    />
    <div
      style={
        Object {
          "marginTop": "1em",
        }
      }
    >
      <div>
        <Button
          disabled={false}
          onClick={[Function]}
        >
          Next
           →
        </Button>
        <Button
          className="close-button"
          disabled={false}
          onClick={[MockFunction]}
        >
          Dismiss
        </Button>
      </div>
    </div>
  </StyledContent>
</StyledAssistantContainer>
`;

exports[`GuideDrawer renders next step 1`] = `
<StyledAssistantContainer>
  <StyledAssistantInputRow>
    <QuestionMarkIcon
      hasGuide={true}
    />
    <StyledTitle>
      2. Title 2
    </StyledTitle>
    <div
      className="close-button"
    >
      <CloseIcon />
    </div>
  </StyledAssistantInputRow>
  <StyledContent>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Message 2",
        }
      }
    />
    <div
      style={
        Object {
          "marginTop": "1em",
        }
      }
    >
      <div>
        <p>
          Did you find this guide useful?
        </p>
        <Button
          disabled={false}
          onClick={[Function]}
          priority="success"
          size="small"
        >
          Yes
             ✔
        </Button>
        <Button
          disabled={false}
          onClick={[Function]}
          priority="success"
          size="small"
          style={
            Object {
              "marginLeft": "0.25em",
            }
          }
        >
          No
             ✖
        </Button>
      </div>
    </div>
  </StyledContent>
</StyledAssistantContainer>
`;
